@@ -34,6 +34,47 @@ npm start
 
 # Package, creates build/lib/data-showcase-0.0.1-SNAPHOT.war
 ./gradlew assemble
+
+# Run the war
+java -jar build/lib/data-showcase-0.0.1-SNAPHOT.war
+```
+
+## Publish
+```bash
+# Deploy to the Nexus repository https://repo.thehyve.nl
+./gradlew publish
+```
+This publishes the artifact `nl.thehyve:data-showcase:0.0.1-SNAPSHOT:war`.
+
+## Deploy
+For deployment, fetch the application war file from the Nexus repository,
+and run the application with an external config file:
+```bash
+MEMORY_OPTIONS="-Xms2g -Xmx2g -XX:MaxPermSize=512m"
+JAVA_OPTIONS="-server -Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom"
+APP_OPTIONS="-Dgrails.env=prod -Dspring.config.location=/home/user/data-showcase-internal.yml"
+java -jar ${JAVA_OPTIONS} ${MEMORY_OPTIONS} ${APP_OPTIONS} data-showcase-0.0.1-SNAPHOT.war
+```
+
+Example configuration file `data-showcase-internal.yml`:
+```yaml
+dataShowcase:
+    environment: Internal
+dataSource:
+    url: jdbc:postgresql://localhost:5432/data_showcase
+    username: dsc_user
+    password: <configure a secure password>
+```
+
+Create the database:
+```bash
+sudo -u postgres psql
+```
+
+```sql
+create user dsc_user with password '<choose a secure password>';
+create database data_showcase;
+grant all privileges on database data_showcase to dsc_user;
 ```
 
 ## Test
